# neonGobyPort

./: .gitmodules  CMakeLists.txt  README.md
include/Dynamic/Analysis/: AliasPair.h  DynamicAliasAnalysis.h  DynamicPointer.h
include/Dynamic/Instrument/: DynamicHooks.h  IDAssigner.h  MemoryInstrument.h
include/dyn-aa/: BaselineAliasAnalysis.h  DynamicAliasAnalysis.h  DynamicPointerAnalysis.h  IntervalTree.h  LogRecord.h  Utils.h
include/rcs/: ExecOnce.h  IdentifyBackEdges.h  IdentifyThreadFuncs.h  InterReach.h  PartialICFGBuilder.h  Reach.h  SourceLocator.h  typedefs.h  util.h
include/rcs/CFG/: FPCallGraph.h  ICFG.h  ICFGBuilder.h  MBB.h
include/rcs/ID/: IDAssigner.h  IDManager.h  IDTagger.h
include/rcs/PointerAnalysis/: PointerAnalysis.h
lib/: CMakeLists.txt
lib/Analyses/: AliasAnalysisChecker.cpp  CMakeLists.txt  DynamicAliasAnalysis.cpp  DynamicPointerAnalysis.cpp  MissingAliasesClassifier.cpp  ReductionVerifier.cpp  TraceSlicer.cpp
lib/Analysis/: CMakeLists.txt  DynamicAliasAnalysis.cpp
lib/CFG/: CMakeLists.txt  CallGraphDrawer.cpp  Exec.cpp  ExecOnce.cpp  FPCallGraph.cpp  ICFG.cpp  ICFGBuilder.cpp  IdentifyThreadFuncs.cpp  InterReach.cpp  IntraReach.cpp  MBB.cpp  PartialICFGBuilder.cpp
lib/Checkers/: AliasAnalysisChecker.cpp  CallGraphChecker.cpp
lib/ID/: CMakeLists.txt  IDAssigner.cpp  IDLookUp.cpp  IDManager.cpp  IDTagger.cpp  ValueRenaming.cpp
lib/Instrument/: CMakeLists.txt  DynamicHooks.cpp  FeatureCheck.cpp  IDAssigner.cpp  MemoryInstrument.cpp
lib/Instrumenters/: AliasCheckerInliner.cpp  AliasCheckerInstrumenter.cpp  CMakeLists.txt  MemoryInstrumenter.cpp  Preparer.cpp
lib/PointerAnalysis/: BasicPointerAnalysis.cpp  CMakeLists.txt  PointToDrawer.cpp  PointerAnalysis.cpp
lib/Transforms/: CMakeLists.txt  Reducer.cpp
lib/Utils/: CMakeLists.txt  Utils.cpp
runtime/: CMakeLists.txt
runtime/AliasChecker/: AliasChecker.cpp  CMakeLists.txt
runtime/MemoryHooks/: CMakeLists.txt  MemoryHooks.cpp
tools/: CMakeLists.txt  ng_check_aa.py  ng_hook_mem.py  ng_utils.py
tools/aa-check/: CMakeLists.txt  aa-check.cpp
tools/dump_log/: CMakeLists.txt
tools/dyn-aa/: CMakeLists.txt  dyn-aa.cpp
tools/instrument/: CMakeLists.txt  instrument.cpp
tools/log-dump/: CMakeLists.txt  log-dump.cpp
tools/opt/: Makefile  opt.cpp
